--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.2.5'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'
+    implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.5'
 }
 
 tasks.named('test') {
