--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,13 +26,13 @@ spring.data.redis.password=Password@123
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=audrms3568@gmail.com
-spring.mail.password=couprzwlyqncnyvg
+spring.mail.password=ppjjshaqsvzfhhor
 
 
-spring.mail.properties.mail.smtp.ssl.trust=*
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.ssl.trust=*
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
