--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=auth_flow
 
+#spring.datasource.url=jdbc:mysql://mysql-datasource:3308/AuthFlow
 spring.datasource.url=jdbc:mysql://localhost:3308/AuthFlow
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=user
